--- a/web-Teknolojileri-Projesi-master/iletisim.html
+++ b/web-Teknolojileri-Projesi-master/iletisim.html
@@ -6,33 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- BOOSTRAP LİNK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/iletisim.css">
+    <link rel="stylesheet" href="./css/iletisim.css">
     <title>İletişim</title>
 </head>
 <body>
   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand mb-0 h1" href="index.html">Ana Sayfa</a>
+      <a class="navbar-brand mb-0 h1" style="color: rgb(0, 0, 0);" href="index.html">Ana Sayfa</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent" >
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="ozgecmis.html">Öz Geçmiş</a>
+            <a class="nav-link" style="color: rgb(0, 0, 0);" href="ozgecmis.html">Öz Geçmiş</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sehrim.html">Şehrim</a>
+            <a class="nav-link" style="color: rgb(0, 0, 0);" href="sehrim.html">Şehrim ve Mirası</a>
           </li>
+        
           <li class="nav-item">
-            <a class="nav-link" href="miras.html">Şehrimin Mirası</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="iletisim.html">İletişim</a>
+            <a class="nav-link" style="color: rgb(0, 0, 0);" href="iletisim.html">İletişim</a>
           </li>
         </ul>
         <li class="nav-item" style="list-style: none;">
-          <a class="nav-link" style="color: white;" href="login.html">Giriş</a>
+          <a class="nav-link" style="color: rgb(0, 0, 0);" href="login.html">Giriş</a>
         </li>
       </div>
     </div>
@@ -41,7 +39,7 @@
 
 
   <div id="iletisim" class="iletişim">
-    <form action="../php/iletisim.php" method="POST" name="Form" onsubmit="return isItEmpty()" style="padding: 20px; text-align: center; background-color: white; margin-right: 20%; margin-left: 20%; border: 1px solid black;border-left: 15px solid #386f94; border-radius: 5px;">	
+    <form action="./php/iletisim.php" method="POST" name="Form" onsubmit="return isItEmpty()" style="padding: 20px; text-align: center; background-color: white; margin-right: 20%; margin-left: 20%; border: 1px solid black;border-left: 15px solid #386f94; border-radius: 5px;">	
       <div class="row">
         <div class="col">
           <div class="input-group">
@@ -154,6 +152,6 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="../js/iletisim.js"></script>
+<script src="./js/iletisim.js"></script>
 </body>
 </html>
