--- a/web-Teknolojileri-Projesi-master/login.html
+++ b/web-Teknolojileri-Projesi-master/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="./css/login.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <!-- BOOSTRAP LİNK -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -25,11 +25,9 @@
             <a class="nav-link" href="ozgecmis.html">Öz Geçmiş</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sehrim.html">Şehrim</a>
+            <a class="nav-link" href="sehrim.html">Şehrim ve Mirası</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="miras.html">Şehrimin Mirası</a>
-          </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="iletisim.html">İletişim</a>
           </li>
@@ -48,7 +46,7 @@
 	<div class="row my-5">
 		<div class="col-md-4 login-sec">
       <h2 class="text-center">Login Now</h2>
-      <form class="login-form" action="../php/admin.php" method="POST" onsubmit="return validateform()">
+      <form class="login-form" action="./php/admin.php" method="POST" onsubmit="return validateform()">
   <div class="form-group">
     <label for="exampleInputEmail1" class="text-uppercase">Username</label>
     <input type="text" name="name" class="form-control" placeholder="Email" required>
@@ -80,6 +78,6 @@
 
 
 
-<script src="../js/login.js"></script>
+<script src="./js/login.js"></script>
 </body>
 </html>
